--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,10 +2,11 @@
   "compilerOptions": {
     "target": "es2016",
     "module": "commonjs",
-    "strict": true,
+    "rootDir": "./",
+    "outDir": "./dist",
     "esModuleInterop": true,
-    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "./dist"
+    "strict": true,
+    "skipLibCheck": true
   }
 }
